# ml-roadmap-bootcamp

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  QUICK_START.md  README.md  START_HERE.md  SUMMARY.md  config.yml  daily_code_tracker.py  docker-compose.yml  hello.txt  mastery_cli.py  mastery_progress.json  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.py  week1_study_guide.md
Payment Systems Project Details/: Adverserial Fraud Detection System Build Details.txt  Adverserial Fraud Detection System Old Version.txt  Adverserial Fraud Detection System.txt  Alternative Data Alpha Generation Platform Project 2 Build.txt  Capstone Project Build Details.txt  Capstone Project Prompt.txt  Fraud Collection Signal.txt  Fraud Signal Collection System Build details.txt  I've successfully built a productio.txt  Kabo Molefe Guideline.txt  Kafka Project Build.txt  Kafka Project Details.txt  Load Testing and Chaos framework Details.txt  Load Testing and Chaose Engineering Build and Questions.txt  ML Observability Stack Project Build Details.txt  Multi Tenant SaaS Phase 1 text.txt  Multi Tenant SaaS Verification Quiz.txt  Multi Tenant SaaS.txt  Observability Project Build Guide.txt  Project  Real-Time Market Risk Management System.txt  Project 1 Real Time Market Risk Management System Build Details.txt  Project 2 Alternative Data Alpha Generation Platform with Explainable Deep Learning.txt  Project Lazarus The Causal Rejection.txt
alpha_platform/: __init__.py
alpha_platform/alpha_generation/: __init__.py  ensemble.py  portfolio.py  risk.py
alpha_platform/backtesting/: __init__.py  engine.py
alpha_platform/data_ingestion/: __init__.py
alpha_platform/explainable_ai/: __init__.py  explainer.py
alpha_platform/feature_engineering/: __init__.py  multimodal_fusion.py  temporal_features.py
alpha_platform/utils/: __init__.py  config.py  data_utils.py  logger.py
artifacts/figures/: .gitkeep  README.md
artifacts/memos/: README.md  TECHNICAL_ARCHITECTURE.md
benchmarks/: fraud_detector_benchmark.py  locustfile.py
chaos/: chaos-scenarios.md  load_test.py
config/: otel-collector-config.yaml  prometheus.yml
config/loki/: loki-config.yaml  promtail-config.yaml
config/prometheus/: alertmanager.yml  alerts.yml  prometheus.yml
configs/: platform_config.yaml
docker/: Dockerfile.fraud-api
docs/: PRD.md  checklist.md  decisions.md  portfolio.md  slo-definitions.md  troubleshooting.md  usage.md
docs/runbooks/: high-error-rate.md
eval/: queries.yaml
examples/: complete_risk_analysis.py  demo_full_system.py
fraud_detection/: __init__.py  types.py
fraud_detection/adversarial/: __init__.py  environment.py  learner.py
fraud_detection/attacks/: __init__.py  base.py  patterns.py  simulator.py
fraud_detection/business/: __init__.py  metrics.py
fraud_detection/defense/: __init__.py  models.py  system.py  training.py
fraud_detection/evaluation/: __init__.py  framework.py  metrics.py  visualizer.py
fraud_detection/graph/: __init__.py  builder.py  detector.py
fraud_detection/monitoring/: __init__.py  logger.py  metrics_tracker.py
fraud_detection/utils/: __init__.py  data_generation.py  features.py  timing.py
kb/: glossary_ai_rag.md  policies.md  project_faq.md  python_basics.md
load-testing/: ARCHITECTURE.md  README.md  requirements.txt
load-testing/chaos/: chaos_engine.py
load-testing/core/: ledger.py  reconciliation.py
load-testing/docker/: docker-compose.yml
load-testing/tests/: payment_load_test.py
multi-tenant-saas/: README.md  requirements.txt
multi-tenant-saas/docs/: BUSINESS_CASE.md
multi-tenant-saas/src/: __init__.py
multistream-app/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
multistream-app/app/: build.gradle.kts  proguard-rules.pro
multistream-app/docs/: IMPLEMENTATION_GUIDE.md  PROJECT_STATUS.md
notebooks/: 01_platform_demo.ipynb
payment_system/: __init__.py
payment_system/domain/: __init__.py  aggregates.py  events.py  value_objects.py
payment_system/infrastructure/: __init__.py  event_store.py
project_lazarus/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
project_lazarus/artifacts/: shadow_mode_report.md
project_lazarus/config/: settings.py
project_lazarus/dashboards/: cost_of_knowledge.json  dashboard.yml
project_lazarus/docker/: grafana-datasources.yml  init.sql  prometheus.yml
project_lazarus/scripts/: __init__.py  lazarus_sim.py
project_lazarus/src/: __init__.py
project_lazarus/src/api/: __init__.py  main.py
project_lazarus/src/core/: __init__.py  models.py  policy.py  router.py  safety_valve.py
project_lazarus/src/features/: __init__.py
project_lazarus/src/features/feature_repo/: feature_store.yaml  features.py
project_lazarus/src/models/: __init__.py  database.py  risk_model.py
project_lazarus/src/monitoring/: __init__.py
project_lazarus/src/training/: __init__.py  causal_trainer.py
project_lazarus/tests/: __init__.py  test_policy.py  test_safety_valve.py
rag/: __init__.py  cli.py  config.py  eval_harness.py  ingest.py  llm.py  pipeline.py  retriever.py
rag/web/: __init__.py  app.py
scripts/: start.sh
sql/init/: 01_create_tables.sql
src/: __init__.py  config.py
src/api/: main.py  routes.py
src/backtesting/: __init__.py  var_backtest.py
src/fraud/: models.py
src/models/: fraud_model.py
src/observability/: __init__.py  instrumentation.py  logging_config.py
src/payments/: service.py
src/regime_detection/: __init__.py  change_point.py  hmm_regime.py
src/risk_engine/: __init__.py  expected_shortfall.py  garch_volatility.py  liquidity_adjusted_var.py  var_calculator.py
src/services/: feature_store.py  fraud_api.py
src/utils/: __init__.py  data_structures.py
streaming/: README.md  requirements.txt
streaming/core/: __init__.py  consumer.py  exactly_once.py  producer.py  resilience.py  (+1 more)
tests/: __init__.py  conftest.py  test_card_testing_pattern.py  test_complete_system.py  test_ingest.py  test_new_card_high_value.py  test_pipeline.py  test_retriever.py  test_velocity_breach.py
(+60 files in other folders)
